--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,6 +60,12 @@ LICENSE file.
       <artifactId>HdrHistogram</artifactId>
       <version>2.1.4</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.6.2</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
